<resources>
    <string name="app_name">ChatApp</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="demo">Demo</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="dont_have_account">Don\'t have an account?\u0020 \u0020 </string>
    <string name="signup_here">Signup here</string>
    <string name="hint_email_phone">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_fn">Name</string>
    <string name="hint_ln">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="next">Next</string>
    <string name="hint_message">Message</string>
</resources>